@@ -50,6 +50,7 @@ public:
 
 	virtual bool isChatWidgetActive(ChatWidget *chatWidget) override;
 	virtual void tryActivateChatWidget(ChatWidget *chatWidget) override;
+    virtual void tryMinimizeChatWidget(ChatWidget *chatWidget) override;
 
 private:
 	QPointer<ChatWindowFactory> m_chatWindowFactory;
